--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
 html,
 body {
+  height: 100vh;
+  background-color: #000;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
